clanSDL_includes = \
        sdl.h \
	SDL/setupsdl.h

clanGL_includes = \
        gl.h \
	GL/opengl_window.h \
	GL/opengl_window_description.h \
	GL/opengl_surface.h \
	GL/setupgl.h \
	GL/opengl.h \
	GL/opengl_state.h \
	GL/opengl_state_data.h \
	GL/viewpoint.h \
	GL/light_source.h \
	GL/shader_object.h \
	GL/program_object.h \
	GL/program_uniform.h \
	GL/program_attribute.h \
	GL/opengl_wrap.h \
        GL/texture.h

clanSmallJPEG_includes = smalljpeg.h SmallJPEG/jpgd_provider.h

clanTTF_includes = TTF/setupttf.h ttf.h

clanMikMod_includes = \
	mikmod.h \
	MikMod/setupmikmod.h \
        MikMod/soundprovider_mikmod.h

clanSignals_includes = \
	signals.h \
	Signals/slotbuffer_v0.h \
	Signals/slotbuffer_v1.h \
	Signals/slot_container.h \
	Signals/signal.h \
	Signals/signal_v0.h \
	Signals/signal_v1.h \
	Signals/signal_v2.h \
	Signals/signal_v3.h \
	Signals/signal_v4.h \
	Signals/signal_v5.h \
	Signals/slot_generic.h \
	Signals/slot.h \
	Signals/slot_v0.h \
	Signals/slot_v1.h \
	Signals/slot_v2.h \
	Signals/slot_v3.h \
	Signals/slot_v4.h \
	Signals/slot_v5.h

clanApp_includes = application.h Application/clanapp.h

clanNetwork_includes = \
	network.h \
	Network/setupnetwork.h \
	Network/IRC/irc_connection.h \
	Network/IRC/irc_numerics.h \
	Network/IRC/dcc_download.h \
	Network/NetSession/inputsource_netpacket.h \
	Network/NetSession/netstream.h \
	Network/NetSession/netgroup.h \
	Network/NetSession/netsession.h \
	Network/NetSession/outputsource_netstream.h \
	Network/NetSession/netpacket.h \
	Network/NetSession/outputsource_netpacket.h \
	Network/NetSession/inputsource_netstream.h \
	Network/NetSession/netcomputer.h \
	Network/Socket/outputsource_socket.h \
	Network/Socket/inputsource_socket.h \
	Network/Socket/ip_address.h \
	Network/Socket/socket.h \
	Network/NetObjects/netobject_server.h \
	Network/NetObjects/netobject_controller.h \
	Network/NetObjects/netobject_client.h \
	Network/NetVariables/netvariables.h

clanVoice_includes = \
	voice.h \
	Voice/voice_encoder.h \
	Voice/voice_server.h \
	Voice/voice_decoder.h \
	Voice/voice_codec.h \
	Voice/voice_client.h

clanGUI_includes = \
	gui.h \
	GUI/treeitem.h \
	GUI/component_move_handler.h \
	GUI/treenode.h \
	GUI/progressbar.h \
	GUI/component.h \
	GUI/component_manager.h \
	GUI/layout.h \
	GUI/label.h \
	GUI/treeview.h \
	GUI/filedialog.h \
	GUI/radiobutton.h \
	GUI/component_resize_handler.h \
	GUI/listitem.h \
	GUI/frame.h \
	GUI/gui_manager.h \
	GUI/scrollbar.h \
	GUI/window.h \
	GUI/checkbox.h \
	GUI/listbox.h \
	GUI/component_type.h \
	GUI/setupgui.h \
	GUI/stylemanager.h \
	GUI/button.h \
	GUI/image.h \
	GUI/messagebox.h \
	GUI/radiogroup.h \
	GUI/component_style.h \
	GUI/inputbox.h \
	GUI/inputdialog.h \
	GUI/inputbox_stylebase.h \
	GUI/menu.h \
	GUI/menu_node.h \
	GUI/menu_item.h \
	GUI/richedit.h \
	GUI/richedit_paragraph.h \
	GUI/deck.h


clanGUIStyleBoring_includes = \
        guistyleboring.h \
        GUIStyleBoring/stylemanager_boring.h \
        GUIStyleBoring/button_boring.h \
        GUIStyleBoring/checkbox_boring.h \
        GUIStyleBoring/frame_boring.h \
        GUIStyleBoring/image_boring.h \
        GUIStyleBoring/inputbox_boring.h \
        GUIStyleBoring/label_boring.h \
        GUIStyleBoring/listbox_boring.h \
        GUIStyleBoring/progressbar_boring.h \
        GUIStyleBoring/radiobutton_boring.h \
        GUIStyleBoring/scrollbar_boring.h \
        GUIStyleBoring/window_boring.h \
	GUIStyleBoring/menu_boring.h \
	GUIStyleBoring/menu_node_boring.h \
	GUIStyleBoring/menu_item_boring.h

clanGUIStyleSilver_includes = \
	guistylesilver.h \
	GUIStyleSilver/button_silver.h \
	GUIStyleSilver/checkbox_silver.h \
	GUIStyleSilver/frame_silver.h \
	GUIStyleSilver/image_silver.h \
	GUIStyleSilver/inputbox_silver.h \
	GUIStyleSilver/label_silver.h \
	GUIStyleSilver/listbox_silver.h \
	GUIStyleSilver/menu_item_silver.h \
	GUIStyleSilver/menu_node_silver.h \
	GUIStyleSilver/menu_silver.h \
	GUIStyleSilver/progressbar_silver.h \
	GUIStyleSilver/radiobutton_silver.h \
	GUIStyleSilver/scrollbar_silver.h \
	GUIStyleSilver/stylemanager_silver.h \
	GUIStyleSilver/treeitem_silver.h \
	GUIStyleSilver/treeview_silver.h \
	GUIStyleSilver/richedit_silver.h \
	GUIStyleSilver/window_silver.h

clanSound_includes = \
	sound.h \
	Sound/SoundFilters/echofilter.h \
	Sound/SoundFilters/fadefilter.h \
	Sound/SoundFilters/inverse_echofilter.h \
	Sound/setupsound.h \
	Sound/sound.h \
	Sound/soundbuffer.h \
	Sound/soundbuffer_session.h \
	Sound/soundfilter.h \
	Sound/soundformat.h \
	Sound/SoundProviders/soundprovider_factory.h \
	Sound/SoundProviders/soundprovider_type.h \
	Sound/SoundProviders/soundprovider_type_register.h \
	Sound/SoundProviders/soundprovider_raw.h \
	Sound/SoundProviders/soundprovider_wave.h \
	Sound/SoundProviders/soundprovider_recorder.h \
	Sound/cd_drive.h \
	Sound/soundoutput.h \
	Sound/soundoutput_description.h \
	Sound/soundprovider.h \
	Sound/soundprovider_session.h


clanCore_includes = \
	core.h \
	Core/core_iostream.h \
	Core/Math/matrix4x4.h \
	Core/Math/cl_vector.h \
	Core/Math/circle.h \
	Core/Math/vector2.inl \
	Core/Math/math.h \
	Core/Math/line_math.h \
	Core/Math/triangle_math.h \
	Core/Math/pointset_math.h \
	Core/Math/rect.h \
	Core/Math/quad.h \
	Core/Math/size.h \
	Core/Math/vector2.h \
	Core/Math/point.h \
	Core/Math/origin.h \
	Core/Math/number_pool.h \
	Core/Math/delauney_triangulator.h \
	Core/Math/outline_triangulator.h \
	Core/IOData/datatypes.h \
	Core/IOData/outputsource_memory.h \
	Core/IOData/outputsource_provider.h \
	Core/IOData/inputsource_provider.h \
	Core/IOData/inputsource_memory.h \
	Core/IOData/cl_endian.h \
	Core/IOData/directory_scanner.h \
	Core/IOData/directory.h \
	Core/IOData/outputsource_file.h \
	Core/IOData/outputsource_zipped.h \
	Core/IOData/inputsource.h \
	Core/IOData/inputsource_provider_file.h \
	Core/IOData/inputsource_file.h \
	Core/IOData/inputsource_zipped.h \
	Core/IOData/outputsource.h \
	Core/IOData/zip_archive.h \
	Core/IOData/zip_file_entry.h \
	Core/System/command_line.h \
	Core/System/event_listener.h \
	Core/System/threadfunc_v0.h \
	Core/System/threadfunc_v1.h \
	Core/System/threadfunc_v2.h \
	Core/System/event_trigger.h \
	Core/System/console_window.h \
	Core/System/keep_alive.h \
	Core/System/log.h \
	Core/System/crash_reporter.h \
	Core/System/call_stack.h \
	Core/System/clanstring.h \
	Core/System/clipboard.h \
	Core/System/setupcore.h \
	Core/System/error.h \
	Core/System/timer.h \
	Core/System/mutex.h \
	Core/System/system.h \
	Core/System/thread.h \
	Core/System/cl_assert.h \
	Core/System/cl_library.h \
	Core/System/clonable.h \
	Core/System/lazycopyptr.h \
	Core/System/owningptr.h \
	Core/System/sharedptr.h \
	Core/System/weakptr.h \
	Core/System/mutexsharedptr.h \
	Core/System/mutexweakptr.h \
	Core/Resources/resource.h \
	Core/Resources/resourcetype_boolean.h \
	Core/Resources/resourcetype_integer.h \
	Core/Resources/resourcetype_float.h \
	Core/Resources/resourcetype_string.h \
	Core/Resources/resource_manager.h \
	Core/Resources/resourcetype_raw.h \
	Core/Resources/resourcedata.h \
	Core/XML/dom_attr.h \
	Core/XML/dom_cdata_section.h \
	Core/XML/dom_character_data.h \
	Core/XML/dom_comment.h \
	Core/XML/dom_document.h \
	Core/XML/dom_document_fragment.h \
	Core/XML/dom_document_type.h \
	Core/XML/dom_element.h \
	Core/XML/dom_entity.h \
	Core/XML/dom_entity_reference.h \
	Core/XML/dom_exception.h \
	Core/XML/dom_implementation.h \
	Core/XML/dom_named_node_map.h \
	Core/XML/dom_node.h \
	Core/XML/dom_node_list.h \
	Core/XML/dom_notation.h \
	Core/XML/dom_processing_instruction.h \
	Core/XML/dom_text.h \
	Core/XML/xml_token.h \
	Core/XML/xml_tokenizer.h \
	Core/XML/xml_writer.h

clanDisplay_includes = \
	display.h \
	Display/display_iostream.h \
	Display/pixel_buffer.h \
	Display/color.h \
	Display/gradient.h \
	Display/palette.h \
	Display/display.h \
	Display/display_mode.h \
	Display/display_window_description.h \
	Display/frameratecounter.h \
	Display/keyboard.h \
	Display/key_binding.h \
	Display/keys.h \
	Display/input_device.h \
	Display/input_event.h \
	Display/input_buffer.h \
	Display/input_button.h \
	Display/input_context.h \
	Display/joystick.h \
	Display/mouse.h \
	Display/sprite.h \
	Display/sprite_packer.h \
	Display/graphic_context.h \
	Display/display_window.h \
	Display/setupdisplay.h \
	Display/font.h \
	Display/Providers/provider_type.h \
	Display/Providers/dc_buffer.h \
	Display/Providers/pcx_provider.h \
	Display/Providers/bmp_provider.h \
	Display/Providers/png_provider.h \
	Display/Providers/provider_factory.h \
	Display/Providers/provider_type_register.h \
	Display/Providers/jpeg_provider.h \
	Display/Providers/targa_provider.h \
	Display/surface.h \
	Display/canvas.h \
	Display/pixel_format.h \
	Display/pixel_format_type.h \
	Display/sprite_description.h \
	Display/rle_surface.h \
	Display/blend_func.h \
	Display/stencil_func.h \
	Display/text_styler.h \
	Display/glyph_buffer.h \
	Display/Collision/collision_outline.h \
	Display/Collision/contour.h \
	Display/Collision/outline_accuracy.h \
	Display/Collision/outline_circle.h \
	Display/Collision/outline_math.h \
	Display/Collision/outline_provider.h \
	Display/Collision/outline_provider_bitmap.h \
	Display/Collision/outline_provider_file.h

clanJavaScript_includes = \
	javascript.h \
	JavaScript/js_classfactory.h \
	JavaScript/js_runtime.h \
	JavaScript/js_config.h \
	JavaScript/js_error.h \
	JavaScript/js_object.h \
	JavaScript/js_value.h \
	JavaScript/js_arguments.h \
	JavaScript/js_context.h

clanVorbis_includes = \
	vorbis.h \
	Vorbis/setupvorbis.h \
	Vorbis/soundprovider_vorbis.h

ClanLibincludedir=$(includedir)/ClanLib-@LT_RELEASE@/ClanLib
nobase_ClanLibinclude_HEADERS = @ClanLib_API_Modules@

# All available headers are listed here (for 'make dist' and such)
EXTRA_HEADERS = \
	$(clanGL_includes) $(clanCore_includes) $(clanTTF_includes) \
        $(clanApp_includes) \
	$(clanDisplay_includes) $(clanMikMod_includes) \
	$(clanNetwork_includes) \
	$(clanSignals_includes) $(clanVoice_includes) \
	$(clanGUI_includes) $(clanSound_includes) $(clanJavaScript_includes) \
	$(clanVorbis_includes) $(clanGUIStyleSilver_includes) $(clanGUIStyleBoring_includes) \
	efence.h

# EOF #
