clanGL_includes = \
	gl.h \
	GL/opengl_target.h \
	GL/api_gl.h \
	GL/opengl_wrap.h \
	GL/opengl.h \
	GL/opengl_defines.h \
	GL/opengl_window_description.h \
	GL/opengl_graphic_context.h \
	GL/setup_gl.h

clanGL1_includes = \
	gl1.h \
	GL1/api_gl1.h \
	GL1/opengl1_defines.h \
	GL1/graphic_context_gl1.h \
	GL1/light_model.h \
	GL1/light_source.h \
	GL1/material.h \
	GL1/opengl1.h \
	GL1/opengl1_target.h \
	GL1/opengl1_window_description.h \
	GL1/opengl1_wrap.h \
	GL1/setup_gl1.h \
	GL1/texture_unit.h

clanMikMod_includes = \
	mikmod.h \
	MikMod/api_mikmod.h \
	MikMod/setupmikmod.h \
	MikMod/soundprovider_mikmod.h

clanApp_includes = \
	application.h \
	App/api_app.h \
	App/clanapp.h

clanNetwork_includes = \
	network.h \
	Network/api_network.h \
	Network/setupnetwork.h \
	Network/Socket/dns_packet.h \
	Network/Socket/dns_resolver.h \
	Network/Socket/dns_resource_record.h \
	Network/Socket/socket_name.h \
	Network/Socket/tcp_connection.h \
	Network/Socket/tcp_listen.h \
	Network/Socket/udp_socket.h \
	Network/Web/http_client_connection.h \
	Network/Web/http_header_help.h \
	Network/Web/http_request_handler.h \
	Network/Web/http_request_handler_provider.h \
	Network/Web/http_server_connection.h \
	Network/Web/http_server.h \
	Network/Web/soap_help.h \
	Network/Web/url_help.h \
	Network/Web/webservice_exception.h \
	Network/Web/webservice_message.h \
	Network/Web/webservice_part.h \
	Network/Web/webservice_client.h \
	Network/Web/wsdl_document.h \
	Network/NetGame/connection_site.h \
	Network/NetGame/event_dispatcher_v3.h \
	Network/NetGame/event_value.h \
	Network/NetGame/event_dispatcher_v2.h \
	Network/NetGame/client.h \
	Network/NetGame/event.h \
	Network/NetGame/connection.h \
	Network/NetGame/event_dispatcher_v0.h \
	Network/NetGame/server.h \
	Network/NetGame/event_dispatcher_v1.h

clanGUI_includes = \
	gui.h \
	GUI/api_gui.h \
	GUI/setup_gui.h \
	GUI/gui_message_activation_change.h \
	GUI/gui_layout_corners.h \
	GUI/gui_layout.h \
	GUI/gui_component.h \
	GUI/gui_component_description.h \
	GUI/gui_manager.h \
	GUI/gui_message.h \
	GUI/gui_message_close.h \
	GUI/gui_message_focus_change.h \
	GUI/gui_message_input.h \
	GUI/gui_message_pointer.h \
	GUI/gui_message_resize.h \
	GUI/gui_theme.h \
	GUI/gui_theme_default.h \
	GUI/gui_theme_part_property.h \
	GUI/gui_theme_part.h \
	GUI/gui_window_manager.h \
	GUI/gui_window_manager_system.h \
	GUI/gui_window_manager_texture.h \
	GUI/gui_window_manager_texture_window.h \
	GUI/accelerator_key.h \
	GUI/accelerator_table.h \
	GUI/Components/checkbox.h \
	GUI/Components/combobox.h \
	GUI/Components/frame.h \
	GUI/Components/groupbox.h \
	GUI/Components/label.h \
	GUI/Components/lineedit.h \
	GUI/Components/listview.h \
	GUI/Components/listview_column_data.h \
	GUI/Components/listview_column_header.h \
	GUI/Components/listview_header.h \
	GUI/Components/listview_item.h \
	GUI/Components/main_window.h \
	GUI/Components/menubar.h \
	GUI/Components/popupmenu.h \
	GUI/Components/popupmenu_item.h \
	GUI/Components/progressbar.h \
	GUI/Components/push_button.h \
	GUI/Components/radiobutton.h \
	GUI/Components/scrollbar.h \
	GUI/Components/slider.h \
	GUI/Components/spin.h \
	GUI/Components/statusbar.h \
	GUI/Components/tab.h \
	GUI/Components/tab_page.h \
	GUI/Components/textedit.h \
	GUI/Components/toolbar.h \
	GUI/Components/tooltip.h \
	GUI/Components/window.h \
	GUI/Components/imageview.h \
	GUI/Components/listview_selected_item.h \
	GUI/Components/listview_icon_list.h \
	GUI/Components/toolbar_item.h \
	GUI/Components/listview_icon.h \
	GUI/Components/openfiledialog.h \
	GUI/Components/savefiledialog.h \
	GUI/Providers/gui_theme_provider.h \
	GUI/Providers/gui_window_manager_provider.h \
	GUI/Providers/gui_layout_provider.h

clanSound_includes = \
	sound.h \
	Sound/api_sound.h \
	Sound/SoundFilters/echofilter.h \
	Sound/SoundFilters/fadefilter.h \
	Sound/SoundFilters/inverse_echofilter.h \
	Sound/setupsound.h \
	Sound/sound.h \
	Sound/soundbuffer.h \
	Sound/soundbuffer_session.h \
	Sound/soundfilter.h \
	Sound/soundformat.h \
	Sound/sound_sse.h \
	Sound/SoundProviders/soundprovider_factory.h \
	Sound/SoundProviders/soundprovider_type.h \
	Sound/SoundProviders/soundprovider_type_register.h \
	Sound/SoundProviders/soundprovider_raw.h \
	Sound/SoundProviders/soundprovider_wave.h \
	Sound/SoundProviders/soundprovider_recorder.h \
	Sound/SoundProviders/soundfilter_provider.h \
	Sound/cd_drive.h \
	Sound/soundoutput.h \
	Sound/soundoutput_description.h \
	Sound/SoundProviders/soundprovider.h \
	Sound/SoundProviders/soundprovider_session.h

clanCore_includes = \
	core.h \
	Core/api_core.h \
	Core/core_iostream.h \
	Core/CSS/css_document.h \
	Core/CSS/css_property.h \
	Core/CSS/css_tokenizer.h \
	Core/CSS/css_token.h \
	Core/IOData/access_control_list.h \
	Core/IOData/cl_endian.h \
	Core/IOData/datatypes.h \
	Core/IOData/directory.h \
	Core/IOData/directory_scanner.h \
	Core/IOData/file.h \
	Core/IOData/file_help.h \
	Core/IOData/iodevice.h \
	Core/IOData/iodevice_memory.h \
	Core/IOData/iodevice_provider.h \
	Core/IOData/path_help.h \
	Core/IOData/pipe_connection.h \
	Core/IOData/pipe_listen.h \
	Core/IOData/security_descriptor.h \
	Core/IOData/security_identifier.h \
	Core/IOData/virtual_directory.h \
	Core/IOData/virtual_directory_listing.h \
	Core/IOData/virtual_directory_listing_entry.h \
	Core/IOData/virtual_file_source.h \
	Core/IOData/virtual_file_system.h \
	Core/Zip/zip_archive.h \
	Core/Zip/zip_writer.h \
	Core/Zip/zip_file_entry.h \
	Core/Zip/zip_reader.h \
	Core/Math/angle.h \
	Core/Math/base64_encoder.h \
	Core/Math/base64_decoder.h \
	Core/Math/bezier_curve.h \
	Core/Math/line.h \
	Core/Math/line_ray.h \
	Core/Math/line_segment.h \
	Core/Math/quaternion.h \
	Core/Math/vec1.h \
	Core/Math/vec2.h \
	Core/Math/vec3.h \
	Core/Math/vec4.h \
	Core/Math/circle.h \
	Core/Math/delauney_triangulator.h \
	Core/Math/ear_clip_triangulator.h \
	Core/Math/ear_clip_result.h \
	Core/Math/line_math.h \
	Core/Math/cl_math.h \
	Core/Math/mat2.h \
	Core/Math/mat3.h \
	Core/Math/mat4.h \
	Core/Math/origin.h \
	Core/Math/outline_triangulator.h \
	Core/Math/point.h \
	Core/Math/pointset_math.h \
	Core/Math/quad.h \
	Core/Math/rect.h \
	Core/Math/rect_packer.h \
	Core/Math/hash_functions.h \
	Core/Math/size.h \
	Core/Math/sha1.h \
	Core/Math/triangle_math.h \
	Core/Resources/resource_data_session.h \
	Core/Resources/resource.h \
	Core/Resources/resource_manager.h \
	Core/System/autoptr.h \
	Core/System/databuffer.h \
	Core/System/block_allocator.h \
	Core/System/command_line.h \
	Core/System/datetime.h \
	Core/System/event.h \
	Core/System/event_provider.h \
	Core/System/exception.h \
	Core/System/mutex.h \
	Core/System/runnable.h \
	Core/System/service.h \
	Core/System/setup_core.h \
	Core/System/sharedptr.h \
	Core/System/system.h \
	Core/System/timer.h \
	Core/System/thread.h \
	Core/System/keep_alive.h \
	Core/System/thread_local_storage.h \
	Core/System/weakptr.h \
	Core/System/console_window.h \
	Core/System/memory_pool.h \
	Core/System/static_memory_pool.h \
	Core/System/fixed_memory_pool.h \
	Core/System/registry_key.h \
	Core/System/disposable_object.h \
	Core/System/interlocked_variable.h \
	Core/Signals/callback_0.h \
	Core/Signals/callback_1.h \
	Core/Signals/callback_2.h \
	Core/Signals/callback_3.h \
	Core/Signals/callback_4.h \
	Core/Signals/callback_5.h \
	Core/Signals/callback_v0.h \
	Core/Signals/callback_v1.h \
	Core/Signals/callback_v2.h \
	Core/Signals/callback_v3.h \
	Core/Signals/callback_v4.h \
	Core/Signals/callback_v5.h \
	Core/Signals/signals_impl.h \
	Core/Signals/signal_v0.h \
	Core/Signals/signal_v1.h \
	Core/Signals/signal_v2.h \
	Core/Signals/signal_v3.h \
	Core/Signals/signal_v4.h \
	Core/Signals/signal_v5.h \
	Core/Signals/virtual_function_v0.h \
	Core/Signals/virtual_function_v1.h \
	Core/Signals/virtual_function_v2.h \
	Core/Signals/virtual_function_v3.h \
	Core/Signals/virtual_function_v4.h \
	Core/Signals/virtual_function_v5.h \
	Core/Signals/virtual_function_0.h \
	Core/Signals/virtual_function_1.h \
	Core/Signals/virtual_function_2.h \
	Core/Signals/virtual_function_3.h \
	Core/Signals/virtual_function_4.h \
	Core/Signals/virtual_function_5.h \
	Core/Signals/slot.h \
	Core/Signals/slot_container.h \
	Core/Text/console.h \
	Core/Text/console_logger.h \
	Core/Text/file_logger.h \
	Core/Text/logger.h \
	Core/Text/string_format.h \
	Core/Text/string_help.h \
	Core/Text/string_types.h \
	Core/Text/string_allocator.h \
	Core/Text/string16.h \
	Core/Text/string8.h \
	Core/Text/string_data16.h \
	Core/Text/string_data8.h \
	Core/Text/string_ref16.h \
	Core/Text/string_ref8.h \
	Core/Text/utf8_reader.h \
	Core/XML/dom_attr.h \
	Core/XML/dom_cdata_section.h \
	Core/XML/dom_character_data.h \
	Core/XML/dom_comment.h \
	Core/XML/dom_document_fragment.h \
	Core/XML/dom_document.h \
	Core/XML/dom_document_type.h \
	Core/XML/dom_element.h \
	Core/XML/dom_entity.h \
	Core/XML/dom_entity_reference.h \
	Core/XML/dom_exception.h \
	Core/XML/dom_implementation.h \
	Core/XML/dom_named_node_map.h \
	Core/XML/dom_node.h \
	Core/XML/dom_node_list.h \
	Core/XML/dom_notation.h \
	Core/XML/dom_processing_instruction.h \
	Core/XML/dom_string.h \
	Core/XML/dom_text.h \
	Core/XML/xml_token.h \
	Core/XML/xml_tokenizer.h \
	Core/XML/xml_writer.h \
	Core/XML/xpath_evaluator.h \
	Core/XML/xpath_object.h

clanDisplay_includes = \
	display.h \
	Display/api_display.h \
	Display/display_target.h \
	Display/display.h \
	Display/screen_info.h \
	Display/setup_display.h \
	Display/2D/texture_group.h \
	Display/2D/draw.h \
	Display/2D/image.h \
	Display/2D/gradient.h \
	Display/2D/rounded_rect.h \
	Display/2D/sprite.h \
	Display/2D/sprite_description.h \
	Display/2D/subtexture.h \
	Display/2D/color.h \
	Display/2D/color_hsv.h \
	Display/2D/color_hsl.h \
	Display/2D/color_hsv2.h \
	Display/2D/color_hsl2.h \
	Display/2D/span_layout.h \
	Display/Collision/outline_accuracy.h \
	Display/Collision/outline_provider_bitmap.h \
	Display/Collision/outline_provider_file.h \
	Display/Collision/contour.h \
	Display/Collision/outline_circle.h \
	Display/Collision/outline_math.h \
	Display/Collision/collision_outline.h \
	Display/Collision/outline_provider.h \
	Display/ImageProviders/jpeg_provider.h \
	Display/ImageProviders/pcx_provider.h \
	Display/ImageProviders/provider_type_register.h \
	Display/ImageProviders/provider_type.h \
	Display/ImageProviders/png_provider.h \
	Display/ImageProviders/targa_provider.h \
	Display/ImageProviders/jpeg_decompressor.h \
	Display/ImageProviders/provider_factory.h \
	Display/ImageProviders/jpeg_compressor.h \
	Display/Image/icon_set.h \
	Display/Image/image_import_description.h \
	Display/Image/pixel_format.h \
	Display/Image/palette.h \
	Display/Image/buffer_usage.h \
	Display/Image/texture_format.h \
	Display/Image/pixel_buffer.h \
	Display/Image/pixel_buffer_help.h \
	Display/Font/font_system.h \
	Display/Font/font_sprite.h \
	Display/Font/font_freetype.h \
	Display/Font/font.h \
	Display/Font/font_metrics.h \
	Display/Font/font_description.h \
	Display/Font/font_vector.h \
	Display/Render/render_batcher.h \
	Display/Render/frame_buffer.h \
	Display/Render/buffer_control.h \
	Display/Render/element_array_buffer.h \
	Display/Render/program_uniform.h \
	Display/Render/texture.h \
	Display/Render/occlusion_query.h \
	Display/Render/pen.h \
	Display/Render/shared_gc_data.h \
	Display/Render/graphic_context.h \
	Display/Render/shader_object.h \
	Display/Render/program_object.h \
	Display/Render/blend_mode.h \
	Display/Render/polygon_rasterizer.h \
	Display/Render/primitives_array.h \
	Display/Render/render_buffer.h \
	Display/Render/program_attribute.h \
	Display/Render/compare_function.h \
	Display/Render/vertex_array_buffer.h \
	Display/Render/primitives_array_builder.h \
	Display/TargetProviders/graphic_context_provider.h \
	Display/TargetProviders/shader_object_provider.h \
	Display/TargetProviders/render_buffer_provider.h \
	Display/TargetProviders/element_array_buffer_provider.h \
	Display/TargetProviders/pixel_buffer_provider.h \
	Display/TargetProviders/frame_buffer_provider.h \
	Display/TargetProviders/occlusion_query_provider.h \
	Display/TargetProviders/input_device_provider.h \
	Display/TargetProviders/font_provider.h \
	Display/TargetProviders/display_window_provider.h \
	Display/TargetProviders/program_object_provider.h \
	Display/TargetProviders/render_window_provider.h \
	Display/TargetProviders/vertex_array_buffer_provider.h \
	Display/TargetProviders/display_target_provider.h \
	Display/TargetProviders/texture_provider.h \
	Display/TargetProviders/cursor_provider.h \
	Display/Window/keys.h \
	Display/Window/input_device.h \
	Display/Window/display_window.h \
	Display/Window/input_context.h \
	Display/Window/display_window_description.h \
	Display/Window/input_event.h \
	Display/Window/input_state.h \
	Display/Window/cursor.h

clanCSSLayout_includes = \
	csslayout.h \
	CSSLayout/css_replaced_component.h \
	CSSLayout/css_property2.h \
	CSSLayout/api_csslayout.h \
	CSSLayout/css_layout.h \
	CSSLayout/css_property_list2.h \
	CSSLayout/css_layout_object.h \
	CSSLayout/dom_select_node.h \
	CSSLayout/css_select_node2.h \
	CSSLayout/css_layout_node.h \
	CSSLayout/css_layout_user_data.h \
	CSSLayout/css_hit_test_result.h \
	CSSLayout/css_layout_element.h \
	CSSLayout/css_document2.h \
	CSSLayout/css_layout_text.h

clanVorbis_includes = \
	vorbis.h \
	Vorbis/api_vorbis.h \
	Vorbis/setupvorbis.h \
	Vorbis/soundprovider_vorbis.h

clanDatabase_includes = \
	database.h \
	Database/api_database.h \
	Database/db_command.h \
	Database/db_command_provider.h \
	Database/db_connection.h \
	Database/db_connection_provider.h \
	Database/db_reader.h \
	Database/db_reader_provider.h \
	Database/db_transaction.h \
	Database/db_transaction_provider.h

clanRegExp_includes = \
	regexp.h \
	RegExp/api_regexp.h \
	RegExp/regexp.h \
	RegExp/regexp_match.h

clanSqlite_includes = \
	sqlite.h \
	Sqlite/api_sqlite.h \
	Sqlite/sqlite_connection.h

clanSWRender_includes = \
	swrender.h \
	SWRender/pixel_command.h \
	SWRender/blit_argb8_sse.h \
	SWRender/swr_graphic_context.h \
	SWRender/pixel_buffer_data.h \
	SWRender/swr_target.h \
	SWRender/setup_swrender.h \
	SWRender/pixel_thread_context.h \
	SWRender/software_program.h \
	SWRender/swr_program_object.h \
	SWRender/api_swrender.h

ClanLibincludedir=$(includedir)/ClanLib-@LT_RELEASE@/ClanLib
nobase_ClanLibinclude_HEADERS = @ClanLib_API_Modules@

# All available headers are listed here (for 'make dist' and such)
EXTRA_HEADERS = \
	$(clanGL_includes) \
	$(clanGL1_includes) \
	$(clanCore_includes) \
        $(clanApp_includes) \
	$(clanDisplay_includes) \
	$(clanMikMod_includes) \
	$(clanNetwork_includes) \
	$(clanGUI_includes) \
	$(clanSWRender_includes) \
	$(clanSound_includes) \
	$(clanVorbis_includes) \
	$(clanDatabase_includes) \
	$(clanSqlite_includes) \
	$(clanRegExp_includes)

# EOF #

