lib_LTLIBRARIES = libclan24CSSLayout.la

libclan24CSSLayout_la_SOURCES = \
	css_layout_node.cpp \
	css_layout_object.cpp \
	css_layout_text.cpp \
	dom_select_node.cpp \
	CSSDocument2/css_property_list2.cpp \
	CSSDocument2/css_document2.cpp \
	CSSDocument2/css_property2.cpp \
	CSSDocument2/css_document2_impl.cpp \
	css_layout_element.cpp \
	precomp.cpp \
	BoxTree/css_box_object.cpp \
	BoxTree/css_box_text.cpp \
	BoxTree/css_box_node_walker.cpp \
	BoxTree/css_box_element.cpp \
	BoxTree/css_property_parsers.cpp \
	BoxTree/css_property_parser.cpp \
	BoxTree/css_box_tree.cpp \
	BoxTree/css_box_node.cpp \
	BoxTree/css_box_properties.cpp \
	BoxTree/PropertyParsers/css_parser_background_image.cpp \
	BoxTree/PropertyParsers/css_parser_text_indent.cpp \
	BoxTree/PropertyParsers/css_parser_unicode_bidi.cpp \
	BoxTree/PropertyParsers/css_parser_counter_increment.cpp \
	BoxTree/PropertyParsers/css_parser_right.cpp \
	BoxTree/PropertyParsers/css_parser_margin.cpp \
	BoxTree/PropertyParsers/css_parser_position.cpp \
	BoxTree/PropertyParsers/css_parser_color.cpp \
	BoxTree/PropertyParsers/css_parser_counter_reset.cpp \
	BoxTree/PropertyParsers/css_parser_min_width.cpp \
	BoxTree/PropertyParsers/css_parser_border_image_outset.cpp \
	BoxTree/PropertyParsers/css_parser_display.cpp \
	BoxTree/PropertyParsers/css_parser_border_width.cpp \
	BoxTree/PropertyParsers/css_parser_border_style.cpp \
	BoxTree/PropertyParsers/css_parser_font_weight.cpp \
	BoxTree/PropertyParsers/css_parser_border_spacing.cpp \
	BoxTree/PropertyParsers/css_parser_border_radius.cpp \
	BoxTree/PropertyParsers/css_parser_background_clip.cpp \
	BoxTree/PropertyParsers/css_parser_padding_ltrb.cpp \
	BoxTree/PropertyParsers/css_parser_max_height.cpp \
	BoxTree/PropertyParsers/css_parser_border_ltrb.cpp \
	BoxTree/PropertyParsers/css_parser_outline_style.cpp \
	BoxTree/PropertyParsers/css_parser_border_ltrb_color.cpp \
	BoxTree/PropertyParsers/css_parser_border_ltrb_style.cpp \
	BoxTree/PropertyParsers/css_parser_list_style_type.cpp \
	BoxTree/PropertyParsers/css_parser_outline.cpp \
	BoxTree/PropertyParsers/css_parser_text_decoration.cpp \
	BoxTree/PropertyParsers/css_parser_overflow.cpp \
	BoxTree/PropertyParsers/css_parser_list_style.cpp \
	BoxTree/PropertyParsers/css_parser_font_size.cpp \
	BoxTree/PropertyParsers/css_parser_font.cpp \
	BoxTree/PropertyParsers/css_parser_border_image_width.cpp \
	BoxTree/PropertyParsers/css_parser_quotes.cpp \
	BoxTree/PropertyParsers/css_parser_table_layout.cpp \
	BoxTree/PropertyParsers/css_parser_vertical_align.cpp \
	BoxTree/PropertyParsers/css_parser_background_origin.cpp \
	BoxTree/PropertyParsers/css_parser_border_radius_corner.cpp \
	BoxTree/PropertyParsers/css_parser_background_attachment.cpp \
	BoxTree/PropertyParsers/css_parser_list_style_position.cpp \
	BoxTree/PropertyParsers/css_parser_font_family.cpp \
	BoxTree/PropertyParsers/css_parser_border_ltrb_width.cpp \
	BoxTree/PropertyParsers/css_parser_border_collapse.cpp \
	BoxTree/PropertyParsers/css_parser_background_color.cpp \
	BoxTree/PropertyParsers/css_parser_text_align.cpp \
	BoxTree/PropertyParsers/css_parser_border_image_slice.cpp \
	BoxTree/PropertyParsers/css_parser_shadow.cpp \
	BoxTree/PropertyParsers/css_parser_font_style.cpp \
	BoxTree/PropertyParsers/css_parser_margin_ltrb.cpp \
	BoxTree/PropertyParsers/css_parser_decoration_break.cpp \
	BoxTree/PropertyParsers/css_parser_line_height.cpp \
	BoxTree/PropertyParsers/css_parser_font_variant.cpp \
	BoxTree/PropertyParsers/css_parser_page_break_inside.cpp \
	BoxTree/PropertyParsers/css_parser_white_space.cpp \
	BoxTree/PropertyParsers/css_parser_cursor.cpp \
	BoxTree/PropertyParsers/css_parser_widows.cpp \
	BoxTree/PropertyParsers/css_parser_list_style_image.cpp \
	BoxTree/PropertyParsers/css_parser_orphans.cpp \
	BoxTree/PropertyParsers/css_parser_border_image_repeat.cpp \
	BoxTree/PropertyParsers/css_parser_border_image.cpp \
	BoxTree/PropertyParsers/css_parser_clear.cpp \
	BoxTree/PropertyParsers/css_parser_content.cpp \
	BoxTree/PropertyParsers/css_parser_bottom.cpp \
	BoxTree/PropertyParsers/css_parser_background_position.cpp \
	BoxTree/PropertyParsers/css_parser_float.cpp \
	BoxTree/PropertyParsers/css_parser_padding.cpp \
	BoxTree/PropertyParsers/css_parser_background_repeat.cpp \
	BoxTree/PropertyParsers/css_parser_left.cpp \
	BoxTree/PropertyParsers/css_parser_caption_side.cpp \
	BoxTree/PropertyParsers/css_parser_background.cpp \
	BoxTree/PropertyParsers/css_parser_outline_width.cpp \
	BoxTree/PropertyParsers/css_parser_letter_spacing.cpp \
	BoxTree/PropertyParsers/css_parser_top.cpp \
	BoxTree/PropertyParsers/css_parser_clip.cpp \
	BoxTree/PropertyParsers/css_parser_width.cpp \
	BoxTree/PropertyParsers/css_parser_z_index.cpp \
	BoxTree/PropertyParsers/css_parser_outline_color.cpp \
	BoxTree/PropertyParsers/css_parser_page_break_after.cpp \
	BoxTree/PropertyParsers/css_parser_height.cpp \
	BoxTree/PropertyParsers/css_parser_text_transform.cpp \
	BoxTree/PropertyParsers/css_parser_background_size.cpp \
	BoxTree/PropertyParsers/css_parser_direction.cpp \
	BoxTree/PropertyParsers/css_parser_max_width.cpp \
	BoxTree/PropertyParsers/css_parser_border_image_source.cpp \
	BoxTree/PropertyParsers/css_parser_min_height.cpp \
	BoxTree/PropertyParsers/css_parser_visibility.cpp \
	BoxTree/PropertyParsers/css_parser_border_color.cpp \
	BoxTree/PropertyParsers/css_parser_empty_cells.cpp \
	BoxTree/PropertyParsers/css_parser_word_spacing.cpp \
	BoxTree/PropertyParsers/css_parser_page_break_before.cpp \
	BoxTree/PropertyParsers/css_parser_border.cpp \
	BoxTree/css_whitespace_eraser.cpp \
	BoxTree/PropertyTypes/css_box_white_space.cpp \
	BoxTree/PropertyTypes/css_box_clip.cpp \
	BoxTree/PropertyTypes/css_box_list_style_image.cpp \
	BoxTree/PropertyTypes/css_box_min_height.cpp \
	BoxTree/PropertyTypes/css_box_text_transform.cpp \
	BoxTree/PropertyTypes/css_box_min_width.cpp \
	BoxTree/PropertyTypes/css_box_background_attachment.cpp \
	BoxTree/PropertyTypes/css_box_font_style.cpp \
	BoxTree/PropertyTypes/css_box_max_width.cpp \
	BoxTree/PropertyTypes/css_box_border_image_outset.cpp \
	BoxTree/PropertyTypes/css_box_padding_width.cpp \
	BoxTree/PropertyTypes/css_box_unicode_bidi.cpp \
	BoxTree/PropertyTypes/css_box_vertical_align.cpp \
	BoxTree/PropertyTypes/css_box_visibility.cpp \
	BoxTree/PropertyTypes/css_box_position.cpp \
	BoxTree/PropertyTypes/css_box_border_collapse.cpp \
	BoxTree/PropertyTypes/css_box_cursor.cpp \
	BoxTree/PropertyTypes/css_box_empty_cells.cpp \
	BoxTree/PropertyTypes/css_box_text_indent.cpp \
	BoxTree/PropertyTypes/css_box_decoration_break.cpp \
	BoxTree/PropertyTypes/css_box_display.cpp \
	BoxTree/PropertyTypes/css_box_quotes.cpp \
	BoxTree/PropertyTypes/css_box_top.cpp \
	BoxTree/PropertyTypes/css_box_bottom.cpp \
	BoxTree/PropertyTypes/css_box_page_break_after.cpp \
	BoxTree/PropertyTypes/css_box_background_repeat.cpp \
	BoxTree/PropertyTypes/css_box_border_radius.cpp \
	BoxTree/PropertyTypes/css_box_height.cpp \
	BoxTree/PropertyTypes/css_box_font_weight.cpp \
	BoxTree/PropertyTypes/css_box_border_image_source.cpp \
	BoxTree/PropertyTypes/css_box_list_style_type.cpp \
	BoxTree/PropertyTypes/css_box_line_height.cpp \
	BoxTree/PropertyTypes/css_box_background_position.cpp \
	BoxTree/PropertyTypes/css_box_border_image_width.cpp \
	BoxTree/PropertyTypes/css_box_font_size.cpp \
	BoxTree/PropertyTypes/css_box_overflow.cpp \
	BoxTree/PropertyTypes/css_box_border_spacing.cpp \
	BoxTree/PropertyTypes/css_box_text_align.cpp \
	BoxTree/PropertyTypes/css_box_margin_width.cpp \
	BoxTree/PropertyTypes/css_box_widows.cpp \
	BoxTree/PropertyTypes/css_box_left.cpp \
	BoxTree/PropertyTypes/css_box_content.cpp \
	BoxTree/PropertyTypes/css_box_background_size.cpp \
	BoxTree/PropertyTypes/css_box_border_image_slice.cpp \
	BoxTree/PropertyTypes/css_box_font_variant.cpp \
	BoxTree/PropertyTypes/css_box_outline_width.cpp \
	BoxTree/PropertyTypes/css_box_background_color.cpp \
	BoxTree/PropertyTypes/css_box_list_style_position.cpp \
	BoxTree/PropertyTypes/css_box_border_style.cpp \
	BoxTree/PropertyTypes/css_box_letter_spacing.cpp \
	BoxTree/PropertyTypes/css_box_clear.cpp \
	BoxTree/PropertyTypes/css_box_word_spacing.cpp \
	BoxTree/PropertyTypes/css_box_orphans.cpp \
	BoxTree/PropertyTypes/css_box_background_image.cpp \
	BoxTree/PropertyTypes/css_box_border_color.cpp \
	BoxTree/PropertyTypes/css_box_border_width.cpp \
	BoxTree/PropertyTypes/css_box_counter_increment.cpp \
	BoxTree/PropertyTypes/css_box_shadow.cpp \
	BoxTree/PropertyTypes/css_box_width.cpp \
	BoxTree/PropertyTypes/css_box_page_break_inside.cpp \
	BoxTree/PropertyTypes/css_box_color.cpp \
	BoxTree/PropertyTypes/css_box_background_origin.cpp \
	BoxTree/PropertyTypes/css_box_font_family.cpp \
	BoxTree/PropertyTypes/css_box_page_break_before.cpp \
	BoxTree/PropertyTypes/css_box_counter_reset.cpp \
	BoxTree/PropertyTypes/css_box_z_index.cpp \
	BoxTree/PropertyTypes/css_box_outline_style.cpp \
	BoxTree/PropertyTypes/css_box_right.cpp \
	BoxTree/PropertyTypes/css_box_direction.cpp \
	BoxTree/PropertyTypes/css_box_border_image_repeat.cpp \
	BoxTree/PropertyTypes/css_box_caption_side.cpp \
	BoxTree/PropertyTypes/css_box_float.cpp \
	BoxTree/PropertyTypes/css_box_background_clip.cpp \
	BoxTree/PropertyTypes/css_box_outline_color.cpp \
	BoxTree/PropertyTypes/css_box_text_decoration.cpp \
	BoxTree/PropertyTypes/css_box_table_layout.cpp \
	BoxTree/PropertyTypes/css_box_max_height.cpp \
	css_resource_cache.cpp \
	css_layout.cpp \
	LayoutTree/css_intrinsic_values.cpp \
	LayoutTree/clan_image_stretch.cpp \
	LayoutTree/css_inline_layout.cpp \
	LayoutTree/css_table_size_grid.cpp \
	LayoutTree/css_stacking_context.cpp \
	LayoutTree/css_border_renderer.cpp \
	LayoutTree/css_background_renderer.cpp \
	LayoutTree/css_layout_cursor.cpp \
	LayoutTree/css_replaced_layout.cpp \
	LayoutTree/css_block_formatting_context.cpp \
	LayoutTree/css_table_layout.cpp \
	LayoutTree/css_used_values.cpp \
	LayoutTree/css_layout_graphics.cpp \
	LayoutTree/css_layout_tree_node.cpp \
	LayoutTree/css_layout_tree.cpp \
	precomp.h \
	css_resource_cache.h \
	css_layout_impl.h \
	CSSDocument2/css_attribute_selector2.h \
	CSSDocument2/css_document2_impl.h \
	CSSDocument2/css_selector_link2.h \
	CSSDocument2/css_ruleset2.h \
	CSSDocument2/css_ruleset_match2.h \
	CSSDocument2/css_selector_chain2.h \
	css_layout_node_impl.h \
	BoxTree/css_box_element.h \
	BoxTree/css_box_object.h \
	BoxTree/css_box_text.h \
	BoxTree/css_box_node.h \
	BoxTree/css_box_tree.h \
	BoxTree/css_whitespace_eraser.h \
	BoxTree/css_property_parser.h \
	BoxTree/PropertyParsers/css_parser_width.h \
	BoxTree/PropertyParsers/css_parser_orphans.h \
	BoxTree/PropertyParsers/css_parser_border_collapse.h \
	BoxTree/PropertyParsers/css_parser_border_image_repeat.h \
	BoxTree/PropertyParsers/css_parser_right.h \
	BoxTree/PropertyParsers/css_parser_clear.h \
	BoxTree/PropertyParsers/css_parser_font_size.h \
	BoxTree/PropertyParsers/css_parser_text_transform.h \
	BoxTree/PropertyParsers/css_parser_empty_cells.h \
	BoxTree/PropertyParsers/css_parser_border_image_source.h \
	BoxTree/PropertyParsers/css_parser_max_width.h \
	BoxTree/PropertyParsers/css_parser_background.h \
	BoxTree/PropertyParsers/css_parser_border_width.h \
	BoxTree/PropertyParsers/css_parser_visibility.h \
	BoxTree/PropertyParsers/css_parser_background_clip.h \
	BoxTree/PropertyParsers/css_parser_unicode_bidi.h \
	BoxTree/PropertyParsers/css_parser_counter_increment.h \
	BoxTree/PropertyParsers/css_parser_border_radius.h \
	BoxTree/PropertyParsers/css_parser_font_style.h \
	BoxTree/PropertyParsers/css_parser_bottom.h \
	BoxTree/PropertyParsers/css_parser_content.h \
	BoxTree/PropertyParsers/css_parser_cursor.h \
	BoxTree/PropertyParsers/css_parser_top.h \
	BoxTree/PropertyParsers/css_parser_page_break_before.h \
	BoxTree/PropertyParsers/css_parser_padding_ltrb.h \
	BoxTree/PropertyParsers/css_parser_clip.h \
	BoxTree/PropertyParsers/css_parser_vertical_align.h \
	BoxTree/PropertyParsers/css_parser_line_height.h \
	BoxTree/PropertyParsers/css_parser_background_attachment.h \
	BoxTree/PropertyParsers/css_parser_outline_color.h \
	BoxTree/PropertyParsers/css_parser_word_spacing.h \
	BoxTree/PropertyParsers/css_parser_margin.h \
	BoxTree/PropertyParsers/css_parser_outline.h \
	BoxTree/PropertyParsers/css_parser_border_ltrb.h \
	BoxTree/PropertyParsers/css_parser_border_style.h \
	BoxTree/PropertyParsers/css_parser_min_height.h \
	BoxTree/PropertyParsers/css_parser_border_image_width.h \
	BoxTree/PropertyParsers/css_parser_border_color.h \
	BoxTree/PropertyParsers/css_parser_text_align.h \
	BoxTree/PropertyParsers/css_parser_decoration_break.h \
	BoxTree/PropertyParsers/css_parser_page_break_after.h \
	BoxTree/PropertyParsers/css_parser_position.h \
	BoxTree/PropertyParsers/css_parser_background_color.h \
	BoxTree/PropertyParsers/css_parser_list_style_position.h \
	BoxTree/PropertyParsers/css_parser_color.h \
	BoxTree/PropertyParsers/css_parser_float.h \
	BoxTree/PropertyParsers/css_parser_quotes.h \
	BoxTree/PropertyParsers/css_parser_max_height.h \
	BoxTree/PropertyParsers/css_parser_border_image_outset.h \
	BoxTree/PropertyParsers/css_parser_counter_reset.h \
	BoxTree/PropertyParsers/css_parser_outline_width.h \
	BoxTree/PropertyParsers/css_parser_border.h \
	BoxTree/PropertyParsers/css_parser_page_break_inside.h \
	BoxTree/PropertyParsers/css_parser_padding.h \
	BoxTree/PropertyParsers/css_parser_table_layout.h \
	BoxTree/PropertyParsers/css_parser_border_image.h \
	BoxTree/PropertyParsers/css_parser_direction.h \
	BoxTree/PropertyParsers/css_parser_font_variant.h \
	BoxTree/PropertyParsers/css_parser_text_decoration.h \
	BoxTree/PropertyParsers/css_parser_overflow.h \
	BoxTree/PropertyParsers/css_parser_border_ltrb_width.h \
	BoxTree/PropertyParsers/css_parser_background_position.h \
	BoxTree/PropertyParsers/css_parser_caption_side.h \
	BoxTree/PropertyParsers/css_parser_z_index.h \
	BoxTree/PropertyParsers/css_parser_font.h \
	BoxTree/PropertyParsers/css_parser_shadow.h \
	BoxTree/PropertyParsers/css_parser_outline_style.h \
	BoxTree/PropertyParsers/css_parser_border_radius_corner.h \
	BoxTree/PropertyParsers/css_parser_border_ltrb_color.h \
	BoxTree/PropertyParsers/css_parser_widows.h \
	BoxTree/PropertyParsers/css_parser_background_size.h \
	BoxTree/PropertyParsers/css_parser_display.h \
	BoxTree/PropertyParsers/css_parser_background_origin.h \
	BoxTree/PropertyParsers/css_parser_white_space.h \
	BoxTree/PropertyParsers/css_parser_background_repeat.h \
	BoxTree/PropertyParsers/css_parser_margin_ltrb.h \
	BoxTree/PropertyParsers/css_parser_letter_spacing.h \
	BoxTree/PropertyParsers/css_parser_height.h \
	BoxTree/PropertyParsers/css_parser_min_width.h \
	BoxTree/PropertyParsers/css_parser_left.h \
	BoxTree/PropertyParsers/css_parser_border_ltrb_style.h \
	BoxTree/PropertyParsers/css_parser_border_image_slice.h \
	BoxTree/PropertyParsers/css_parser_background_image.h \
	BoxTree/PropertyParsers/css_parser_font_family.h \
	BoxTree/PropertyParsers/css_parser_text_indent.h \
	BoxTree/PropertyParsers/css_parser_border_spacing.h \
	BoxTree/PropertyParsers/css_parser_font_weight.h \
	BoxTree/PropertyParsers/css_parser_list_style_image.h \
	BoxTree/PropertyParsers/css_parser_list_style.h \
	BoxTree/PropertyParsers/css_parser_list_style_type.h \
	BoxTree/css_property_parsers.h \
	BoxTree/css_box_node_walker.h \
	LayoutTree/css_background_renderer.h \
	LayoutTree/css_inline_layout.h \
	LayoutTree/css_table_size_grid.h \
	LayoutTree/css_border_renderer.h \
	LayoutTree/css_layout_tree_node.h \
	LayoutTree/css_containing_block.h \
	LayoutTree/css_table_column.h \
	LayoutTree/css_used_value.h \
	LayoutTree/css_intrinsic_values.h \
	LayoutTree/css_layout_cursor.h \
	LayoutTree/css_table_row.h \
	LayoutTree/clan_image_stretch.h \
	LayoutTree/css_layout_tree.h \
	LayoutTree/css_block_formatting_context.h \
	LayoutTree/css_replaced_layout.h \
	LayoutTree/css_layout_graphics.h \
	LayoutTree/css_table_layout.h \
	LayoutTree/css_stacking_context.h \
	LayoutTree/css_used_values.h \
	LayoutTree/css_layout_hit_test_result.h

libclan24CSSLayout_la_LDFLAGS = \
  -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) $(LDFLAGS_LT_RELEASE) \
  $(extra_LIBS_clanCSSLayout)

libclan24CSSLayout_la_CXXFLAGS=$(clanCSSLayout_CXXFLAGS) $(extra_CFLAGS_clanCSSLayout)
# EOF #

